--- a/requirements.txt
+++ b/requirements.txt
@@ -7,8 +7,10 @@ dj-database-url==0.5.0
 dj-static==0.0.6
 Django==3.0.7
 django-extensions==2.2.9
+django-filter==2.3.0
 django-input-mask==2.0.2
 django-localflavor==3.0.1
+django-nose==1.4.6
 djangorestframework==3.11.0
 drf-writable-nested==0.6.0
 gunicorn==20.0.4
